--- a/grsecurity/how-to-build-kernel-withgrsec.mkd
+++ b/grsecurity/how-to-build-kernel-withgrsec.mkd
@@ -1,6 +1,6 @@
 # 如何将grsecurity补丁打到内核进行编译
 
-* 将以4.9.24内核版本进行示例   
+* 将以grsecurity的4.9.24内核版本补丁进行示例。   
 
 原操作系统发行版本：debian 9.1  
 原操作系统内核版本：4.9.30-2+deb9u3 (2017-08-06) x86_64 GNU/Linux  
